docs/api/qiskit/0.45/providers_models.mdx
---
title: models (v0.45)
description: API reference for qiskit.providers.models in qiskit v0.45
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.providers.models
---

<span id="module-qiskit.providers.models" />

<span id="qiskit-providers-models" />

<span id="backend-objects-qiskit-providers-models" />

# Backend Objects

`qiskit.providers.models`

Qiskit schema-conformant objects used by the backends and providers.

## Backend Objects

|                                                                                                                                                          |                                                                       |
| -------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------- |
| [`BackendConfiguration`](qiskit.providers.models.BackendConfiguration "qiskit.providers.models.BackendConfiguration")(backend\_name, ...\[, ...])        | Backwards compat shim representing an abstract backend configuration. |
| [`BackendProperties`](qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")(backend\_name, ...)                         | Class representing backend properties                                 |
| [`BackendStatus`](qiskit.providers.models.BackendStatus "qiskit.providers.models.BackendStatus")(backend\_name, backend\_version, ...)                   | Class representing Backend Status.                                    |
| [`QasmBackendConfiguration`](qiskit.providers.models.QasmBackendConfiguration "qiskit.providers.models.QasmBackendConfiguration")(backend\_name, ...)    | Class representing an OpenQASM 2.0 Backend Configuration.             |
| [`PulseBackendConfiguration`](qiskit.providers.models.PulseBackendConfiguration "qiskit.providers.models.PulseBackendConfiguration")(backend\_name, ...) | Static configuration state for an OpenPulse enabled backend.          |
| [`UchannelLO`](qiskit.providers.models.UchannelLO "qiskit.providers.models.UchannelLO")(q, scale)                                                        | Class representing a U Channel LO                                     |
| [`GateConfig`](qiskit.providers.models.GateConfig "qiskit.providers.models.GateConfig")(name, parameters, qasm\_def\[, ...])                             | Class representing a Gate Configuration                               |
| [`PulseDefaults`](qiskit.providers.models.PulseDefaults "qiskit.providers.models.PulseDefaults")(qubit\_freq\_est, meas\_freq\_est, ...)                 | Description of default settings for Pulse systems.                    |
| [`Command`](qiskit.providers.models.Command "qiskit.providers.models.Command")(name\[, qubits, sequence])                                                | Class representing a Command.                                         |
| [`JobStatus`](qiskit.providers.models.JobStatus "qiskit.providers.models.JobStatus")(job\_id, status, status\_msg, \*\*kwargs)                           | Model for JobStatus.                                                  |
| [`GateProperties`](qiskit.providers.models.GateProperties "qiskit.providers.models.GateProperties")(qubits, gate, parameters, ...)                       | Class representing a gate's properties                                |
| [`Nduv`](qiskit.providers.models.Nduv "qiskit.providers.models.Nduv")(date, name, unit, value)                                                           | Class representing name-date-unit-value                               |

